Added html for home page

--- a/index.html
+++ b/index.html
@@ -11,9 +11,18 @@
 </head>
 
 <body>
-	index.html
-
-	hei hei
+	<main>
+		<div class="main_container">
+			<img src="/_app/assets/logo/mobile-logo.svg" alt="" class="main_logo">
+			<div class="main_image">
+				<img src="/_app/assets/images/absinthe.png" alt="">
+			</div>
+			<button class="navigation_button">
+				<img src="/_app/assets/icons/nav.svg" alt="">
+			</button>
+		</div>
+	</main>
+	<nav></nav>
 </body>
 
 </html>
