added navigation style and soma changes to hero

--- a/index.html
+++ b/index.html
@@ -14,15 +14,30 @@
 	<main>
 		<div class="main_container">
 			<img src="/_app/assets/logo/mobile-logo.svg" alt="" class="main_logo">
-			<div class="main_image">
+			<button class="main_image">
 				<img src="/_app/assets/images/absinthe.png" alt="">
-			</div>
+			</button>
 			<button class="navigation_button">
 				<img src="/_app/assets/icons/nav.svg" alt="">
 			</button>
+			<nav>
+				<ul class="navigation">
+					<li><button><img class="navigation__image" src="./_app/assets/images/absinthe.png" alt=""></button></li>
+					<li><button><img class="navigation__image" src="./_app/assets/images/agave-reserva-spirit.png" alt=""></button></li>
+					<li><button><img class="navigation__image" src="./_app/assets/images/amaretti.png" alt=""></button></li>
+					<li><button><img class="navigation__image" src="./_app/assets/images/american-malt.png" alt=""></button></li>
+					<li><button><img class="navigation__image" src="./_app/assets/images/apertif-dry.png" alt=""></button></li>
+					<li><button><img class="navigation__image" src="./_app/assets/images/coffee-originale.png" alt=""></button></li>
+					<li><button><img class="navigation__image" src="./_app/assets/images/dark-cane-spirit.png" alt=""></button></li>
+					<li><button><img class="navigation__image" src="./_app/assets/images/italian-orange.png" alt=""></button></li>
+					<li><button><img class="navigation__image" src="./_app/assets/images/italian-spritz.png" alt=""></button></li>
+					<li><button><img class="navigation__image" src="./_app/assets/images/orange-sec.png" alt=""></button></li>
+					<li><button><img class="navigation__image" src="./_app/assets/images/pink-london-spirit.png" alt=""></button></li>
+					<li><button><img class="navigation__image" src="./_app/assets/images/spiced-cane-spirit.png" alt=""></button></li>
+					<li><button><img class="navigation__image" src="./_app/assets/images/white-cane-spirit.png" alt=""></button></li>
+				</ul>
+			</nav>
 		</div>
 	</main>
-	<nav></nav>
 </body>
-
 </html>
