fiexed curved text

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 		<div class="main_container">
 			<img src="/_app/assets/logo/mobile-logo.svg" alt="" class="main_logo">
 			<button class="main_image">
-				<img src="/_app/assets/images/absinthe.png" alt="">
+				<div class="img">
+					<img src="/_app/assets/images/absinthe.png" alt="">
+				</div>
 			</button>
 			<button class="navigation_button">
 				<img src="/_app/assets/icons/nav.svg" alt="">
