--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 	<link rel="stylesheet" href="/_app/css/main.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&family=Roboto:wght@300;400&display=swap"
+		rel="stylesheet">
 
 	<script type="module" src="/_app/js/main.js"></script>
 </head>
@@ -17,7 +19,7 @@
 <body>
 	<main>
 		<div class="main_container">
-			<img class="mobile-logo"src="/_app/assets/logo/mobile-logo.svg" alt="" class="main_logo">
+			<img class="mobile-logo" src="/_app/assets/logo/mobile-logo.svg" alt="" class="main_logo">
 			<button class="main_image">
 				<div class="img">
 					<img src="/_app/assets/images/absinthe.png" alt="">
@@ -26,34 +28,46 @@
 			<div class="information">
 				<div class="logo">
 					<img src="./_app/assets/logo/desktop-logo.svg" alt="">
-					<span class="sub-header__sans-serif">impossibly created</span>
-					<span class="sub-header__serif">non-alcoholic spirits</span>
 				</div>
 				<div class="information-text">
-					Lyre’s was founded in 2019 to replicate the world’s most popular spirits in a non-alcoholic format, each as close to the original premium volume spirit as possible. In a short space of time we have grown to become the world’s leading independent non-alcoholic spirits brand.
+					Lyre’s was founded in 2019 to replicate the world’s most popular spirits in a non-alcoholic format, each
+					as close to the original premium volume spirit as possible. In a short space of time we have grown to
+					become the world’s leading independent non-alcoholic spirits brand.
 				</div>
 			</div>
-			<button class="navigation_button">
+			<!-- <button class="navigation_button">
 				<img src="/_app/assets/icons/nav.svg" alt="">
-			</button>
-			<nav>
+			</button> -->
+			<nav class="nav">
 				<ul class="navigation">
 					<li><button><img class="navigation__image" src="./_app/assets/images/absinthe.png" alt=""></button></li>
-					<li><button><img class="navigation__image" src="./_app/assets/images/agave-reserva-spirit.png" alt=""></button></li>
+					<li><button><img class="navigation__image" src="./_app/assets/images/agave-reserva-spirit.png"
+								alt=""></button></li>
 					<li><button><img class="navigation__image" src="./_app/assets/images/amaretti.png" alt=""></button></li>
-					<li><button><img class="navigation__image" src="./_app/assets/images/american-malt.png" alt=""></button></li>
-					<li><button><img class="navigation__image" src="./_app/assets/images/apertif-dry.png" alt=""></button></li>
-					<li><button><img class="navigation__image" src="./_app/assets/images/coffee-originale.png" alt=""></button></li>
-					<li><button><img class="navigation__image" src="./_app/assets/images/dark-cane-spirit.png" alt=""></button></li>
-					<li><button><img class="navigation__image" src="./_app/assets/images/italian-orange.png" alt=""></button></li>
-					<li><button><img class="navigation__image" src="./_app/assets/images/italian-spritz.png" alt=""></button></li>
-					<li><button><img class="navigation__image" src="./_app/assets/images/orange-sec.png" alt=""></button></li>
-					<li><button><img class="navigation__image" src="./_app/assets/images/pink-london-spirit.png" alt=""></button></li>
-					<li><button><img class="navigation__image" src="./_app/assets/images/spiced-cane-spirit.png" alt=""></button></li>
-					<li><button><img class="navigation__image" src="./_app/assets/images/white-cane-spirit.png" alt=""></button></li>
+					<li><button><img class="navigation__image" src="./_app/assets/images/american-malt.png" alt=""></button>
+					</li>
+					<li><button><img class="navigation__image" src="./_app/assets/images/apertif-dry.png" alt=""></button>
+					</li>
+					<li><button><img class="navigation__image" src="./_app/assets/images/coffee-originale.png"
+								alt=""></button></li>
+					<li><button><img class="navigation__image" src="./_app/assets/images/dark-cane-spirit.png"
+								alt=""></button></li>
+					<li><button><img class="navigation__image" src="./_app/assets/images/italian-orange.png" alt=""></button>
+					</li>
+					<li><button><img class="navigation__image" src="./_app/assets/images/italian-spritz.png" alt=""></button>
+					</li>
+					<li><button><img class="navigation__image" src="./_app/assets/images/orange-sec.png" alt=""></button>
+					</li>
+					<li><button><img class="navigation__image" src="./_app/assets/images/pink-london-spirit.png"
+								alt=""></button></li>
+					<li><button><img class="navigation__image" src="./_app/assets/images/spiced-cane-spirit.png"
+								alt=""></button></li>
+					<li><button><img class="navigation__image" src="./_app/assets/images/white-cane-spirit.png"
+								alt=""></button></li>
 				</ul>
 			</nav>
 		</div>
 	</main>
 </body>
+
 </html>
