added nav button

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 					become the world’s leading independent non-alcoholic spirits brand.
 				</div>
 			</div>
-			<!-- <button class="navigation_button">
+			<button class="navigation_button">
 				<img src="/_app/assets/icons/nav.svg" alt="">
-			</button> -->
+			</button>
 			<nav class="nav">
 				<ul class="navigation">
 					<li><button><img class="navigation__image" src="./_app/assets/images/absinthe.png" alt=""></button></li>
