finished background and hero changes on click

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<img class="mobile-logo" src="/_app/assets/logo/mobile-logo.svg" alt="" class="main_logo">
 			<button class="main_image">
 				<div class="img">
-					<img src="/_app/assets/images/absinthe.png" alt="">
+					<img id="hero-img" src="/_app/assets/images/absinthe.png" alt="">
 				</div>
 			</button>
 			<div class="information">
