started setting up information page

--- a/information-page/index.html
+++ b/information-page/index.html
@@ -10,8 +10,27 @@
 	<script type="module" src="/_app/js/main.js"></script>
 </head>
 
-<body>
-	
+<body class="body__information">
+	<header>
+		<div class="header__logo">
+			<a href="../index.html"><img src="../_app/assets/logo/header-logo.svg" alt="home"></a>
+		</div>
+	</header>
+	<main>
+		<h1>American Malt</h1>
+		<div class="product-image">
+			<img src="../_app/assets/images/american-malt.png" alt="Lyre's American Malt">
+		</div>
+		<p>This unique spirit has been impossibly crafted to capture the essence of a gently mellowed American Classic Bourbon Malt with flavours that are distinct and contemporary. Lyre's spirits have their own distinction as a premium, non-alcoholic beverage.</p>
+
+		<p><strong>Flavour profile: </strong>Generous flavours of vanilla and toasted nuts with herbal notes providing a complexity, offset by a long, mellow finish.</p>
+		<ul>
+			<li>
+				<img src="../_app/assets/icons/flavours/herbs.png" alt="">Herbs</li>
+			<li>Toasted nuts</li>
+			<li>Vanilla</li>
+		</ul>
+	</main>
 </body>
 
 </html>
