added html filler content

--- a/information-page/index.html
+++ b/information-page/index.html
@@ -25,11 +25,67 @@
 
 		<p><strong>Flavour profile: </strong>Generous flavours of vanilla and toasted nuts with herbal notes providing a complexity, offset by a long, mellow finish.</p>
 		<ul>
-			<li>
-				<img src="../_app/assets/icons/flavours/herbs.png" alt="">Herbs</li>
-			<li>Toasted nuts</li>
-			<li>Vanilla</li>
+			<li><img src="../_app/assets/icons/flavours/herbs.png" alt="Herbs">Herbs<li>
+			<li><img src="../_app/assets/icons/flavours/toasted-nuts.png" alt="toasted nuts">Toasted nuts<li>
+			<li><img src="../_app/assets/icons/flavours/vanilla.png" alt="vanilla">Vanilla<li>
 		</ul>
+
+		<div class="product-information">
+			<div class="product-information__header">How to enjoy</div>
+			<div class="product-information__tab-1">
+				<div class="product-information__tab-1-content">Enjoy with your favourite premium mixer such as cola. A natural for classic cocktails including the Old Fashioned or an excellent Boulevardier with Lyre's Aperitif Rosso and Lyre's Italian Orange. <em>Libations!</em></div>
+			</div>
+			<div class="product-information__header">Taste profile</div>
+			<div class="product-information__tab-2">
+				<div class="product-information__tab-2-content">
+					<p><strong>To Taste:</strong> Generous flavours of vanilla and toasted nuts with herbal notes providing a complexity, offset by a long mellow finish. The gently spiced palate results in the flavours remaining well after finishing.</p>
+					<p><strong>Bouquet:</strong> Honey notes, with scents of sweet spice and charred, cedary oak.</p>
+				</div>
+			</div>
+			<div class="product-information__header">Instructions</div>
+			<div class="product-information__tab-3">
+				<div class="product-information__tab-3-content">
+					Always reseal with original cap after opening. Do not leave bottle open or replace cap with pourer. Once open, best refrigerated for optimum freshness. Recommended to be consumed within 12 weeks of opening.
+				</div>
+			</div>
+			<div class="product-information__header">Ingredients</div>
+			<div class="product-information__tab-4">
+				<div class="product-information__tab-4-content">
+					Water, Glucose Syrup, Sugar, Natural Flavouring, Acidity Regulator (Phosphoric Acid), Preservative: Potassium Sorbate, Stabiliser: Cellulose Gum (E466), Steviol Glycosides. **DAIRY FREE, NUT FREE, EGG FREE, GLUTEN FREE, VEGAN FRIENDLY.
+
+					<table>
+						<tr>
+							<td>Sugar Contents:</td>
+							<td>0.6g/30ml and 2g/100ml</td>
+						</tr>
+						<tr>
+							<td>Carbohydrate Contents:</td>
+							<td>0.6g/30ml and 2g/100ml</td>
+						</tr>
+						<tr>
+							<td>Sodium:</td>
+							<td>0.6g/30ml and 2g/100ml</td>
+						</tr>
+						<tr>
+							<td>Fat - Saturated:</td>
+							<td>0.6g/30ml and 2g/100ml</td>
+						</tr>
+						<tr>
+							<td>Fat - Total:</td>
+							<td>0.6g/30ml and 2g/100ml</td>
+						</tr>
+						<tr>
+							<td>Protein:</td>
+							<td>0.6g/30ml and 2g/100ml</td>
+						</tr>
+						<tr>
+							<td>Energy:</td>
+							<td>0.6g/30ml and 2g/100ml</td>
+						</tr>
+					</table>
+				</div>
+			</div>
+		</div>
 	</main>
 </body>
 
