--- a/information-page/index.html
+++ b/information-page/index.html
@@ -17,39 +17,46 @@
 		</div>
 	</header>
 	<main>
-		<h1>American Malt</h1>
-		<div class="product-image">
-			<img src="../_app/assets/images/american-malt.png" alt="Lyre's American Malt">
+		.
+		<div class="product">
+			<div class="product-underlay"></div>
+			<div class="product-image">
+				<img src="../_app/assets/images/american-malt.png" alt="Lyre's American Malt">
+			</div>
+			<div class="product-text">
+				<h1>American Malt</h1>
+				<p class="product-bio">This unique spirit has been impossibly crafted to capture the essence of a gently mellowed American Classic Bourbon Malt with flavours that are distinct and contemporary. Lyre's spirits have their own distinction as a premium, non-alcoholic beverage.</p>
+		
+				<p class="product-flavour-profile"><strong>Flavour profile: </strong>Generous flavours of vanilla and toasted nuts with herbal notes providing a complexity, offset by a long, mellow finish.</p>
+	
+				<ul class="product-flavours">
+					<li><img src="../_app/assets/icons/flavours/herbs.png" alt="Herbs">Herbs<li>
+					<li><img src="../_app/assets/icons/flavours/toasted-nuts.png" alt="toasted nuts">Toasted nuts<li>
+					<li><img src="../_app/assets/icons/flavours/vanilla.png" alt="vanilla">Vanilla<li>
+				</ul>
+			</div>
 		</div>
-		<p>This unique spirit has been impossibly crafted to capture the essence of a gently mellowed American Classic Bourbon Malt with flavours that are distinct and contemporary. Lyre's spirits have their own distinction as a premium, non-alcoholic beverage.</p>
-
-		<p><strong>Flavour profile: </strong>Generous flavours of vanilla and toasted nuts with herbal notes providing a complexity, offset by a long, mellow finish.</p>
-		<ul>
-			<li><img src="../_app/assets/icons/flavours/herbs.png" alt="Herbs">Herbs<li>
-			<li><img src="../_app/assets/icons/flavours/toasted-nuts.png" alt="toasted nuts">Toasted nuts<li>
-			<li><img src="../_app/assets/icons/flavours/vanilla.png" alt="vanilla">Vanilla<li>
-		</ul>
 
 		<div class="product-information">
-			<div class="product-information__header">How to enjoy</div>
-			<div class="product-information__tab-1">
+			<div class="product-information__header" data-id="0">How to enjoy</div>
+			<div class="product-information__tab product-information__tab-1">
 				<div class="product-information__tab-1-content">Enjoy with your favourite premium mixer such as cola. A natural for classic cocktails including the Old Fashioned or an excellent Boulevardier with Lyre's Aperitif Rosso and Lyre's Italian Orange. <em>Libations!</em></div>
 			</div>
-			<div class="product-information__header">Taste profile</div>
-			<div class="product-information__tab-2">
+			<div class="product-information__header" data-id="1">Taste profile</div>
+			<div class="product-information__tab product-information__tab-2">
 				<div class="product-information__tab-2-content">
 					<p><strong>To Taste:</strong> Generous flavours of vanilla and toasted nuts with herbal notes providing a complexity, offset by a long mellow finish. The gently spiced palate results in the flavours remaining well after finishing.</p>
 					<p><strong>Bouquet:</strong> Honey notes, with scents of sweet spice and charred, cedary oak.</p>
 				</div>
 			</div>
-			<div class="product-information__header">Instructions</div>
-			<div class="product-information__tab-3">
+			<div class="product-information__header" data-id="2">Instructions</div>
+			<div class="product-information__tab product-information__tab-3">
 				<div class="product-information__tab-3-content">
 					Always reseal with original cap after opening. Do not leave bottle open or replace cap with pourer. Once open, best refrigerated for optimum freshness. Recommended to be consumed within 12 weeks of opening.
 				</div>
 			</div>
-			<div class="product-information__header">Ingredients</div>
-			<div class="product-information__tab-4">
+			<div class="product-information__header" data-id="3">Ingredients</div>
+			<div class="product-information__tab product-information__tab-4">
 				<div class="product-information__tab-4-content">
 					Water, Glucose Syrup, Sugar, Natural Flavouring, Acidity Regulator (Phosphoric Acid), Preservative: Potassium Sorbate, Stabiliser: Cellulose Gum (E466), Steviol Glycosides. **DAIRY FREE, NUT FREE, EGG FREE, GLUTEN FREE, VEGAN FRIENDLY.
 
