added dry london spirit to nav

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 								alt=""></button></li>
 					<li><button><img class="navigation__image" src="./_app/assets/images/dark-cane.png"
 								alt=""></button></li>
+					<li><button><img class="navigation__image" src="./_app/assets/images/dry-london.png"
+								alt=""></button></li>
 					<li><button><img class="navigation__image" src="./_app/assets/images/italian-orange.png" alt=""></button>
 					</li>
 					<li><button><img class="navigation__image" src="./_app/assets/images/italian-spritz.png" alt=""></button>
