change image and variable name to match sanityData

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<img src="/_app/assets/icons/nav.svg" alt="">
 			</button>
 			<nav class="nav">
-				<ul class="navigation">
+				<!-- <ul class="navigation">
 					<li><button><img class="navigation__image" src="./_app/assets/images/absinthe.png" alt=""></button></li>
 					<li><button><img class="navigation__image" src="./_app/assets/images/agave-reserva.png"
 								alt=""></button></li>
@@ -67,7 +67,7 @@
 					<li><button><img class="navigation__image" src="./_app/assets/images/spiced-cane.png"
 								alt=""></button></li>
 					<li><button><img class="navigation__image" src="./_app/assets/images/white-cane.png"
-								alt=""></button></li>
+								alt=""></button></li> -->
 				</ul>
 			</nav>
 		</div>
