--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<img class="mobile-logo" src="/_app/assets/logo/mobile-logo.svg" alt="" class="main_logo">
 			<button class="main_image">
 				<div class="img">
-					<a href="./information-page/index.html">
+					<a href="">
 						<img id="hero-img" src="/_app/assets/images/absinthe.png" alt="">
 					</a>
 				</div>
