removed static html

--- a/information-page/index.html
+++ b/information-page/index.html
@@ -29,19 +29,17 @@
 		<div class="product-information">
 			<div class="product-information__header" data-id="0">How to enjoy</div>
 			<div class="product-information__tab product-information__tab-1">
-				<div class="product-information__tab-1-content">Enjoy with your favourite premium mixer such as cola. A natural for classic cocktails including the Old Fashioned or an excellent Boulevardier with Lyre's Aperitif Rosso and Lyre's Italian Orange. <em>Libations!</em></div>
+				<div class="product-information__tab-1-content"></div>
 			</div>
 			<div class="product-information__header" data-id="1">Taste profile</div>
 			<div class="product-information__tab product-information__tab-2">
 				<div class="product-information__tab-2-content">
-					<p><strong>To Taste:</strong> Generous flavours of vanilla and toasted nuts with herbal notes providing a complexity, offset by a long mellow finish. The gently spiced palate results in the flavours remaining well after finishing.</p>
-					<p><strong>Bouquet:</strong> Honey notes, with scents of sweet spice and charred, cedary oak.</p>
 				</div>
 			</div>
 			<div class="product-information__header" data-id="2">Instructions</div>
 			<div class="product-information__tab product-information__tab-3">
 				<div class="product-information__tab-3-content">
-					Always reseal with original cap after opening. Do not leave bottle open or replace cap with pourer. Once open, best refrigerated for optimum freshness. Recommended to be consumed within 12 weeks of opening.
+					
 				</div>
 			</div>
 			<div class="product-information__header" data-id="3">Ingredients</div>
@@ -79,6 +77,12 @@
 							<td>0.6g/30ml and 2g/100ml</td>
 						</tr>
 					</table>
+				</div>
+			</div>
+			<div class="product-information__header" data-id="4">Receipts</div>
+			<div class="product-information__tab product-information__tab-5">
+				<div class="product-information__tab-5-content">
+					
 				</div>
 			</div>
 		</div>
