--- a/_studio/.sanity/runtime/index.html
+++ b/_studio/.sanity/runtime/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en">
 <!--
 This file is auto-generated from "sanity dev".
-Modifications to this file are automatically discarded.
+Modifications to this file is automatically discarded.
 
 To customize the rendering of this file, see
 https://docs.sanity.io/help/custom-document-component
@@ -185,7 +185,7 @@ https://docs.sanity.io/help/custom-document-component
     margin: 0;
     -webkit-font-smoothing: antialiased;
   }
-</style></head><body><div id="sanity"></div><script type="module" src="/.sanity\runtime\app.js"></script><noscript><div class="sanity-app-no-js__root"><div class="sanity-app-no-js__content"><style type="text/css">
+</style></head><body><div id="sanity"></div><script type="module" src="/.sanity/runtime/app.js"></script><noscript><div class="sanity-app-no-js__root"><div class="sanity-app-no-js__content"><style type="text/css">
 .sanity-app-no-js__root {
   position: absolute;
   top: 0;
