--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 </head>
 
 <body>
+	<header class="product-category">
+		<button id="spirit">Spirit</button>
+		<button id="premixed">Premixed</button>
+		<button id="sparklingWine">Sparkling Wine</button>
+	</header>
 	<main>
 		<div class="main_container">
 			<img class="mobile-logo" src="/_app/assets/logo/mobile-logo.svg" alt="" class="main_logo">
