--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<button class="main_image">
 				<div class="img">
 					<a href="">
-						<img id="hero-img" src="/_app/assets/images/absinthe.png" alt="">
+						<img id="hero-img" data-id= 'absinthe' src="/_app/assets/images/absinthe.png" alt="">
 					</a>
 				</div>
 			</button>
