--- a/index.html
+++ b/index.html
@@ -17,13 +17,18 @@
 </head>
 
 <body>
+	<header class="product-category">
+		<button id="spirit">Spirit</button>
+		<button id="premixed">Premixed</button>
+		<button id="sparklingWine">Sparkling Wine</button>
+	</header>
 	<main>
 		<div class="main_container">
 			<img class="mobile-logo" src="/_app/assets/logo/mobile-logo.svg" alt="" class="main_logo">
 			<button class="main_image">
 				<div class="img">
 					<a href="">
-						<img id="hero-img" src="/_app/assets/images/absinthe.png" alt="">
+						<img id="hero-img" data-id= 'absinthe' src="/_app/assets/images/absinthe.png" alt="">
 					</a>
 				</div>
 			</button>
