deleted ingredients table and recipes

--- a/information-page/index.html
+++ b/information-page/index.html
@@ -20,10 +20,10 @@
 		
 		<div class="product">
 			<div class="product-underlay"></div>
-			<div class="product-image">
-			</div>
-			<div class="product-text">
-			</div>
+
+			<div class="product-image"></div>
+
+			<div class="product-text"></div>
 		</div>
 
 		<div class="product-information">
@@ -31,59 +31,20 @@
 			<div class="product-information__tab product-information__tab-1">
 				<div class="product-information__tab-1-content"></div>
 			</div>
+
 			<div class="product-information__header" data-id="1">Taste profile</div>
 			<div class="product-information__tab product-information__tab-2">
-				<div class="product-information__tab-2-content">
-				</div>
+				<div class="product-information__tab-2-content"></div>
 			</div>
+
 			<div class="product-information__header" data-id="2">Instructions</div>
 			<div class="product-information__tab product-information__tab-3">
-				<div class="product-information__tab-3-content">
-					
-				</div>
+				<div class="product-information__tab-3-content"></div>
 			</div>
+			
 			<div class="product-information__header" data-id="3">Ingredients</div>
 			<div class="product-information__tab product-information__tab-4">
-				<div class="product-information__tab-4-content">
-					Water, Glucose Syrup, Sugar, Natural Flavouring, Acidity Regulator (Phosphoric Acid), Preservative: Potassium Sorbate, Stabiliser: Cellulose Gum (E466), Steviol Glycosides. **DAIRY FREE, NUT FREE, EGG FREE, GLUTEN FREE, VEGAN FRIENDLY.
-
-					<table>
-						<tr>
-							<td>Sugar Contents:</td>
-							<td>0.6g/30ml and 2g/100ml</td>
-						</tr>
-						<tr>
-							<td>Carbohydrate Contents:</td>
-							<td>0.6g/30ml and 2g/100ml</td>
-						</tr>
-						<tr>
-							<td>Sodium:</td>
-							<td>0.6g/30ml and 2g/100ml</td>
-						</tr>
-						<tr>
-							<td>Fat - Saturated:</td>
-							<td>0.6g/30ml and 2g/100ml</td>
-						</tr>
-						<tr>
-							<td>Fat - Total:</td>
-							<td>0.6g/30ml and 2g/100ml</td>
-						</tr>
-						<tr>
-							<td>Protein:</td>
-							<td>0.6g/30ml and 2g/100ml</td>
-						</tr>
-						<tr>
-							<td>Energy:</td>
-							<td>0.6g/30ml and 2g/100ml</td>
-						</tr>
-					</table>
-				</div>
-			</div>
-			<div class="product-information__header" data-id="4">Receipts</div>
-			<div class="product-information__tab product-information__tab-5">
-				<div class="product-information__tab-5-content">
-					
-				</div>
+				<div class="product-information__tab-4-content"></div>
 			</div>
 		</div>
 	</main>
