styled product category buttons

--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
 					become the world’s leading independent non-alcoholic spirits brand.
 				</div>
 			</div>
-			<nav class="nav">
-				<!-- </ul> -->
-			</nav>
+			<nav class="nav"></nav>
 		</div>
 	</main>
 </body>
