--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Index</title>
+	<title>Lyre's</title>
 
 	<link rel="stylesheet" href="/_app/css/main.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
